=== HEAD

* Add Dataset#with_sql_{each,all,first,single_value,insert,update} optimized methods (jeremyevans)

* Make pg_array extension use correct type when typecasting column values for smallint, oid, real, character, and varchar arrays (jeremyevans)

* Make Database#column_schema_to_ruby_default a public method in the schema_dumper extension (jeremyevans) (#776)

* Fix multiple corner cases in the eager_graph support (jeremyevans) (#771)

* Use streaming to implement paging for Dataset#paged_each in the mysql2 adapter (jeremyevans)

* Use a cursor to implement paging for Dataset#paged_each in the postgres adapter (jeremyevans)

* Add Database#create_join_table? and #create_join_table! for consistency (jeremyevans)

* Add Dataset#where_current_of to the postgres adapter for supporting updating rows based on a cursor's current position (jeremyevans)

* Add Dataset#use_cursor :hold option in the postgres adapter for supporting cursor use outside of a transaction (jeremyevans)

* Add Dataset#paged_each :strategy=>:filter option for increased performance (jeremyevans)

=== 4.8.0 (2014-03-01)

* Add SQL::AliasedExpression#alias alias for #aliaz (jeremyevans)

* Handle SQL::Identifier, SQL::QualifiedIdentifier, and SQL::AliasedExpression objects as first argument to Dataset#graph (jeremyevans)

* Respect qualification and aliases in symbols passed as first argument to Dataset#graph (dividedmind) (#769)

* Recognize new constraint violation error messages in SQLite 3.8.2+ (itswindtw) (#766)

* Use limit strategy to correctly handle limited associations in the dataset_associations plugin (jeremyevans)

* Handle issues in dataset_associations plugin when dataset uses unqualified identifiers for associations requiring joins (jeremyevans)

* Handle fractional seconds in input timestamps in the odbc/mssql adapter (Ross Attrill, jeremyevans)

* Return fractional seconds in timestamps in the odbc adapter (jeremyevans)
